--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,4 +1,4 @@
-= README: inanepain/config
+= Changelog: inanepain/config
 :author: Philip Michael Raab
 :email: <philip@cathedral.co.za>
 :description: Configuration helpers.
@@ -20,26 +20,22 @@
 :pkg-name: config
 :pkg-id: {pkg-vendor}/{pkg-name}
 
-== image:./icon.png[title={pkg-id},25] {pkg-id}
+Version: $Id$ ($Date$)
 
-{description}
-
-<<<
+== History
 
 :leveloffset: +2
 
-= Install
+= 0.1.0 @2022 Oct 10
+:author: Philip Michael Raab
+:email: <philip@cathedral.co.za>
+:description: Configuration helpers.
+:keywords: inanepain, library, config
+:copyright: Unlicense
+:homepage: https://git.cathedral.co.za:3000/inanepain/config
+:revnumber: 0.1.0
+:revdate: 2022-10-10
 
-.composer
-[source,shell]
-----
-composer require inanepain/config
-----
+- initial
 
 :leveloffset!:
-
-<<<
-
-== Revision
-
- version: $Id$ ($Date$)
