--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -26,6 +26,21 @@ Version: $Id$ ($Date$)
 
 :leveloffset: +2
 
+= 0.2.0 (2025 Aug 07)
+:author: Philip Michael Raab
+:email: <philip@cathedral.co.za>
+:description: Configuration helpers.
+:keywords: inanepain, library, config
+:copyright: Unlicense
+:homepage: https://git.cathedral.co.za:3000/inanepain/config
+:revnumber: 0.2.0
+:revdate: 2025-08-07
+
+- new: `Config` Object to load config directory structure.
+
+:leveloffset!:
+:leveloffset: +2
+
 = 0.1.0 @2022 Oct 10
 :author: Philip Michael Raab
 :email: <philip@cathedral.co.za>
