--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -5,10 +5,11 @@
 :keywords: inanepain, library, config
 :copyright: Unlicense
 :homepage: https://git.cathedral.co.za:3000/inanepain/config
-:revnumber: 0.1.0
-:revdate: 2022-10-10
+:revnumber: 0.3.0
+:revdate: 2025-xx-xx
+:revremark: -dev
+:version-label: Unconfirmed
 :experimental:
-:doctype: book
 :hide-uri-scheme:
 :icons: font
 :source-highlighter: highlight.js
@@ -20,10 +21,24 @@
 :pkg-name: config
 :pkg-id: {pkg-vendor}/{pkg-name}
 
-Version: $Id$ ($Date$)
-
 == History
 
+:leveloffset: +2
+
+= 0.2.0-dev (2025 Aug 07)
+:author: Philip Michael Raab
+:email: <philip@cathedral.co.za>
+:description: Configuration helpers.
+:keywords: inanepain, library, config
+:copyright: Unlicense
+:homepage: https://git.cathedral.co.za:3000/inanepain/config
+:revnumber: 0.3.0
+:revdate: 2025-xx-xx
+
+* new: `Config` Object to load config directory structure.
+* update: `OptionsInterface` used throughout.
+
+:leveloffset!:
 :leveloffset: +2
 
 = 0.2.0 (2025 Aug 07)
@@ -36,12 +51,12 @@ Version: $Id$ ($Date$)
 :revnumber: 0.2.0
 :revdate: 2025-08-07
 
-- new: `Config` Object to load config directory structure.
+* new: `Config` Object to load config directory structure.
 
 :leveloffset!:
 :leveloffset: +2
 
-= 0.1.0 @2022 Oct 10
+= 0.1.0 (2022 Oct 10)
 :author: Philip Michael Raab
 :email: <philip@cathedral.co.za>
 :description: Configuration helpers.
@@ -51,6 +66,6 @@ Version: $Id$ ($Date$)
 :revnumber: 0.1.0
 :revdate: 2022-10-10
 
-- initial
+* initial
 
 :leveloffset!:
