Add `Config::getConfig` method for class-specific configuration
Introduced a new method `Config::getConfig` in the `Config` class to retrieve configurations for a specified class. Updated documentation and versioning to reflect this change, and removed unused markdown files from the project.

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -36,6 +36,7 @@
 :revdate: 2025-xx-xx
 
 * new: `Config` Object to load config directory structure.
+* new: `Config::getConfig` get class-specific configuration.
 * update: `OptionsInterface` used throughout.
 
 :leveloffset!:
