--- a/doc/changelog/release/0.0.0.adoc
+++ b/doc/changelog/release/0.0.0.adoc
@@ -9,4 +9,5 @@
 :revdate: 2025-xx-xx
 
 * new: `Config` Object to load config directory structure.
+* new: `Config::getConfig` get class-specific configuration.
 * update: `OptionsInterface` used throughout.
