--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -6,9 +6,9 @@
 :copyright: Unlicense
 :homepage: https://git.cathedral.co.za:3000/inanepain/config
 :revnumber: 0.3.0
-:revdate: 2025-xx-xx
-:revremark: -dev
-:version-label: Unconfirmed
+:revdate: 2025-11-20
+// :revremark: -dev
+// :version-label: Unconfirmed
 :experimental:
 :hide-uri-scheme:
 :icons: font
@@ -25,15 +25,9 @@
 
 :leveloffset: +2
 
-= 0.2.0-dev (2025 Aug 07)
-:author: Philip Michael Raab
-:email: <philip@cathedral.co.za>
-:description: Configuration helpers.
-:keywords: inanepain, library, config
-:copyright: Unlicense
-:homepage: https://git.cathedral.co.za:3000/inanepain/config
+= 0.3.0 (2025 Nov 20)
 :revnumber: 0.3.0
-:revdate: 2025-xx-xx
+:revdate: 2025-11-20
 
 * new: `Config` Object to load config directory structure.
 * new: `Config::getConfig` get class-specific configuration.
