--- a/doc/changelog/index.adoc
+++ b/doc/changelog/index.adoc
@@ -6,9 +6,9 @@
 :copyright: Unlicense
 :homepage: https://git.cathedral.co.za:3000/inanepain/config
 :revnumber: 0.3.0
-:revdate: 2025-xx-xx
-:revremark: -dev
-:version-label: Unconfirmed
+:revdate: 2025-11-20
+// :revremark: -dev
+// :version-label: Unconfirmed
 :experimental:
 :hide-uri-scheme:
 :icons: font
@@ -23,6 +23,6 @@
 
 == History
 
-include::./release/0.0.0.adoc[leveloffset=+2]
+include::./release/0.3.0.adoc[leveloffset=+2]
 include::./release/0.2.0.adoc[leveloffset=+2]
 include::./release/0.1.0.adoc[leveloffset=+2]
