--- a/doc/changelog/release/0.3.0.adoc
+++ b/doc/changelog/release/0.3.0.adoc
@@ -1,6 +1,6 @@
-= 0.3.0-dev (2025 Nov 20)
+= 0.3.0 (2025 Nov 20)
 :revnumber: 0.3.0
-:revdate: 2025-xx-xx
+:revdate: 2025-11-20
 
 * new: `Config` Object to load config directory structure.
 * new: `Config::getConfig` get class-specific configuration.
