Update documentation and version for release 0.4.0
- Updated project homepage URL to GitHub.
- Adjusted revision number and date across documentation.
- Added release notes for version 0.4.0.

--- a/README.adoc
+++ b/README.adoc
@@ -4,9 +4,9 @@
 :description: Configuration helpers.
 :keywords: inanepain, library, config
 :copyright: Unlicense
-:homepage: https://git.cathedral.co.za:3000/inanepain/config
-:revnumber: 0.3.0
-:revdate: 2025-11-20
+:homepage: https://github.com/inanepain/config
+:revnumber: 0.4.0
+:revdate: 2026-02-04
 :experimental:
 :hide-uri-scheme:
 :icons: font
