--- a/doc/changelog/index.adoc
+++ b/doc/changelog/index.adoc
@@ -4,9 +4,9 @@
 :description: Configuration helpers.
 :keywords: inanepain, library, config
 :copyright: Unlicense
-:homepage: https://git.cathedral.co.za:3000/inanepain/config
+:homepage: https://github.com/inanepain/config
 :revnumber: 0.4.0
-:revdate: 2025-xx-xx
+:revdate: 2026-02-04
 // :revremark: -dev
 // :version-label: Unconfirmed
 :experimental:
@@ -23,7 +23,7 @@
 
 == History
 
-include::./release/0.0.0.adoc[leveloffset=+2]
+include::./release/0.4.0.adoc[leveloffset=+2]
 include::./release/0.3.0.adoc[leveloffset=+2]
 include::./release/0.2.0.adoc[leveloffset=+2]
 include::./release/0.1.0.adoc[leveloffset=+2]
