--- a/doc/changelog/release/0.0.0.adoc
+++ b/doc/changelog/release/0.0.0.adoc
@@ -1,7 +1,6 @@
-= 0.4.0-dev (2026 Xxx xx)
-:revnumber: 0.4.0
+= 0.5.0-dev (2026 Xxx xx)
+:revnumber: 0.5.0
 :revdate: 2026-xx-xx
+:revremark: -dev
+:version-label: Unconfirmed
 
-* update: `ConfigAwareTrait::setConfig` check for property `defaultConfig` to use as the config base options.
-* new: `ConfigAwareAttribute::globalConfig` Whether to use global or class-specific configuration.
-* update: *README* has been greatly improved.
